# Cagnotte-Web-App

./: PKG-INFO  README.md  data.db  pyproject.toml
src/cagnotte/: __init__.py  api.py  auth.py  data.py  domain.py  test_app.py  validation.py  views_cli.py  web.py
src/cagnotte/templates/: base.html  error.html  login.html  pot_detail.html  pots.html  swagger.html
