[project]
name = "cagnotte"
version = "0.1.0"
description = "Cagnotte / partage des dépenses (CLI + Web) - architecture n-tier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "flask>=3.0",
  "flask-httpauth>=4.8",
  "sqlalchemy>=2.0",
  "spectree>=2.0",
  "granian>=2.7.3",
]

[project.scripts]
cagnotte = "cagnotte.views_cli:cli"
cagnotte-web = "cagnotte.web:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cagnotte"]
